--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+/*apply plugin: 'jar'*/
 
 group = 'com.zqw.order'
 version = '0.0.1-SNAPSHOT'
