--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ dependencies {
 	/*compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '1.5.8.RELEASE'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools*/
 	compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '1.5.8.RELEASE'
+	// https://mvnrepository.com/artifact/com.google.zxing/core
+	compile group: 'com.google.zxing', name: 'core', version: '3.3.1'
+	// https://mvnrepository.com/artifact/net.glxn/qrgen
+	compile group: 'net.glxn', name: 'qrgen', version: '1.4'
+	compile fileTree(dir:'libs',include:['*.jar'])
 
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
