--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,13 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'war'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 /*apply plugin: 'jar'*/
 
 group = 'com.zqw.order'
-version = '0.0.1-SNAPSHOT'
+//version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
@@ -27,6 +28,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	providedCompile("org.springframework.boot:spring-boot-starter-tomcat")
 	runtime('mysql:mysql-connector-java')
 	compile group: 'com.alibaba', name: 'druid', version: '1.0.18'
 //	compile group: 'org.webjars', name: 'bootstrap', version: '3.3.7'
